[project]
name = "project-template"
version = "0.1.0"
description = "scrapes a hat retail"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.4.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "ruff>=0.13.2",
]
